# airbnb

./: README.md  db.sqlite3  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authentication.py  settings.py  urls.py
direct_messages/: apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_rename_chattingroom_message_room.py  0003_alter_chattingroom_users_alter_message_room_and_more.py
exercise/: main.py  main2.py  main3.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details.py  0003_alter_experience_category_alter_experience_host.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py
medias/: admin.py  models.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file.py  0004_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name.py  (+3 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  urls.py  views.py
(+5 files in other folders)
