[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = ""
authors = ["NohSungwoo <shtjddn0817@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
django = "^5.1"
black = {extras = ["d"], version = "^24.8.0"}
isort = "^5.13.2"
pillow = "^10.4.0"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
